# dfhack-mcp

./: README.md  main.py  pyproject.toml
